--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,9 +21,6 @@ jobs:
         
     - name: Install dependencies
       run: yarn install --frozen-lockfile
-      
-    - name: Build
-      run: yarn run build
       
     - name: Run Tests
       run: yarn test
