--- a/package.json
+++ b/package.json
@@ -74,8 +74,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2"
   }
