--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/supabase-js": "^2.39.0",
-    "@types/node": "20.6.2",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "10.4.15",
     "bufferutil": "^4.0.9",
     "class-variance-authority": "^0.7.0",
@@ -57,16 +57,18 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.5.1",
+    "eslint-config-next": "^16.1.0",
     "input-otp": "^1.2.4",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.446.0",
-    "next": "13.5.1",
+    "next": "^16.1.0",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
-    "react": "18.2.0",
+    "react": "^19.2.3",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.53.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
@@ -83,6 +85,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
+    "@types/leaflet": "^1.9.21",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
